logs/70637-javac.out
src/main/java/pages/KapHomePage.java:3: error: package org.openqa.selenium does not exist
import org.openqa.selenium.By;
                          ^
src/main/java/pages/KapHomePage.java:4: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebDriver;
                          ^
src/main/java/pages/KapHomePage.java:5: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebElement;
                          ^
src/main/java/pages/KapHomePage.java:6: error: package org.openqa.selenium.support.ui does not exist
import org.openqa.selenium.support.ui.ExpectedConditions;
                                     ^
src/main/java/pages/KapHomePage.java:7: error: package org.openqa.selenium.support.ui does not exist
import org.openqa.selenium.support.ui.WebDriverWait;
                                     ^
src/main/java/pages/KapHomePage.java:13: error: cannot find symbol
    private WebDriver driver;
            ^
  symbol:   class WebDriver
  location: class KapHomePage
src/main/java/pages/KapHomePage.java:14: error: cannot find symbol
    private WebDriverWait wait;
            ^
  symbol:   class WebDriverWait
  location: class KapHomePage
src/main/java/pages/KapHomePage.java:17: error: cannot find symbol
    public KapHomePage(WebDriver driver) {
                       ^
  symbol:   class WebDriver
  location: class KapHomePage
src/main/java/pages/KapHomePage.java:23: error: cannot find symbol
    private By bildirimSorgulariButton = By.xpath("//button[.//span[text()='Bildirim Sorguları']]");
            ^
  symbol:   class By
  location: class KapHomePage
src/main/java/pages/KapHomePage.java:26: error: cannot find symbol
    private By detayliSorgulamaLink = By.xpath("//a[@href='/tr/bildirim-sorgu']");
            ^
  symbol:   class By
  location: class KapHomePage
src/main/java/utils/DriverFactory.java:3: error: package io.github.bonigarcia.wdm does not exist
import io.github.bonigarcia.wdm.WebDriverManager;
                               ^
src/main/java/utils/DriverFactory.java:4: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebDriver;
                          ^
src/main/java/utils/DriverFactory.java:5: error: package org.openqa.selenium.chrome does not exist
import org.openqa.selenium.chrome.ChromeDriver;
                                 ^
src/main/java/utils/DriverFactory.java:8: error: cannot find symbol
    private static WebDriver driver;
                   ^
  symbol:   class WebDriver
  location: class DriverFactory
src/main/java/utils/DriverFactory.java:10: error: cannot find symbol
    public static WebDriver getDriver() {
                  ^
  symbol:   class WebDriver
  location: class DriverFactory
src/test/java/steps/KapSteps.java:4: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebDriver;
                          ^
src/test/java/steps/KapSteps.java:10: error: cannot find symbol
    WebDriver driver = DriverFactory.getDriver();
    ^
  symbol:   class WebDriver
  location: class KapSteps
src/main/java/pages/KapHomePage.java:19: error: cannot find symbol
        this.wait = new WebDriverWait(driver, Duration.ofSeconds(10));
                        ^
  symbol:   class WebDriverWait
  location: class KapHomePage
src/main/java/pages/KapHomePage.java:23: error: cannot find symbol
    private By bildirimSorgulariButton = By.xpath("//button[.//span[text()='Bildirim Sorguları']]");
                                         ^
  symbol:   variable By
  location: class KapHomePage
src/main/java/pages/KapHomePage.java:26: error: cannot find symbol
    private By detayliSorgulamaLink = By.xpath("//a[@href='/tr/bildirim-sorgu']");
                                      ^
  symbol:   variable By
  location: class KapHomePage
src/main/java/pages/KapHomePage.java:30: error: cannot find symbol
        WebElement element = wait.until(ExpectedConditions.elementToBeClickable(bildirimSorgulariButton));
        ^
  symbol:   class WebElement
  location: class KapHomePage
src/main/java/pages/KapHomePage.java:30: error: cannot find symbol
        WebElement element = wait.until(ExpectedConditions.elementToBeClickable(bildirimSorgulariButton));
                                        ^
  symbol:   variable ExpectedConditions
  location: class KapHomePage
src/main/java/pages/KapHomePage.java:36: error: cannot find symbol
        WebElement element = wait.until(ExpectedConditions.visibilityOfElementLocated(detayliSorgulamaLink));
        ^
  symbol:   class WebElement
  location: class KapHomePage
src/main/java/pages/KapHomePage.java:36: error: cannot find symbol
        WebElement element = wait.until(ExpectedConditions.visibilityOfElementLocated(detayliSorgulamaLink));
                                        ^
  symbol:   variable ExpectedConditions
  location: class KapHomePage
src/main/java/utils/DriverFactory.java:12: error: cannot find symbol
            WebDriverManager.chromedriver().setup();
            ^
  symbol:   variable WebDriverManager
  location: class DriverFactory
src/main/java/utils/DriverFactory.java:13: error: cannot find symbol
            driver = new ChromeDriver();
                         ^
  symbol:   class ChromeDriver
  location: class DriverFactory
26 errors
